streamlit_deploy.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: Deploy Streamlit app on EC2

Parameters:

  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
    AllowedPattern: "^(?=\\s*\\S).*$"

  S3BucketName:
    Description: S3 bucket to upload the PDF files
    Type: String
    AllowedPattern: "^(?=\\s*\\S).*$"

  CidrIPRange:
    Description: Please enter the Public CIDR of your local PC (e.g. 73.13.100.24/32)
    Type: String
    Default: 73.13.100.24/32
    AllowedPattern: "^(?=\\s*\\S).*$"
  
Resources:
  S3Bucket:
    Type: 'AWS::S3::Bucket'
    DeletionPolicy: Retain
    Properties:
      BucketName: !Ref S3BucketName
  EC2KeyPair:
    Type: 'AWS::EC2::KeyPair'
    Properties:
      KeyName: !Sub '${AWS::StackName}-EC2KeyPair'
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId 
      InstanceType: t2.micro
      KeyName: !Ref EC2KeyPair
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      IamInstanceProfile: !Ref InstanceProfile
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          set -x
          yum update -y
          yum -y groupinstall "Development Tools"
          yum -y install git aws-cli openssl-devel bzip2-devel libffi-devel
          wget https://www.python.org/ftp/python/3.9.16/Python-3.9.16.tgz
          tar xzf Python-3.9.16.tgz
          rm -rf Python-3.9.16.tgz
          cd Python-3.9.16
          ./configure --enable-optimizations
          make altinstall
          su ec2-user
          s3_bucket_name=${S3BucketName}
          admin_role="arn:aws:iam::${AWS::AccountId}:role/${AdminRole}"
          os_endpoint_url="https://${TextractVectorCollection}.${AWS::Region}.aoss.amazonaws.com"
          echo $s3_bucket_name > /home/ec2-user/envconfig.txt
          echo $admin_role >> /home/ec2-user/envconfig.txt
          echo $os_endpoint_url >> /home/ec2-user/envconfig.txt
          export PATH=$PATH:/usr/local/bin/python3.9
          echo $PATH
          export STREAMLIT_SERVER_PORT=8501
          export S3_BUCKET_NAME=$s3_bucket_name
          export OPENSEARCH_ENDPOINT=$os_endpoint_url
          export AWS_REGION=${AWS::Region}
          export AWS_DEFAULT_REGION=${AWS::Region}
          echo "export PATH=$PATH:/usr/local/bin/python3.9" >> /home/ec2-user/.bash_profile
          echo "export STREAMLIT_SERVER_PORT=8501" >> /home/ec2-user/.bash_profile
          echo "export S3_BUCKET_NAME=$s3_bucket_name" >> /home/ec2-user/.bash_profile
          echo "export OPENSEARCH_ENDPOINT=$os_endpoint_url" >> /home/ec2-user/.bash_profile
          echo "export AWS_REGION=${AWS::Region}" >> /home/ec2-user/.bash_profile
          echo "export AWS_DEFAULT_REGION=${AWS::Region}" >> /home/ec2-user/.bash_profile
          cd /home/ec2-user/
          source .bash_profile
          python3.9 -m venv venv
          source venv/bin/activate
          git clone https://github.com/duttaabh/CS-02-GenAI-PDF-Table-Extract
          pip3.9 install -r CS-02-GenAI-PDF-Table-Extract/requirements.txt
          cp CS-02-GenAI-PDF-Table-Extract/main.py /home/ec2-user/main.py
          echo "#!/bin/bash" >> /home/ec2-user/start_application.sh
          echo "cd /home/ec2-user/" >> /home/ec2-user/start_application.sh
          echo ". .bash_profile" >> /home/ec2-user/start_application.sh
          echo "source venv/bin/activate" >> /home/ec2-user/start_application.sh
          echo "nohup python3.9 -m streamlit run /home/ec2-user/main.py &" >> /home/ec2-user/start_application.py
          chmod 755 /home/ec2-user/start_application.py
          chown -R ec2-user:ec2-user /home/ec2-user/

  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allow HTTP traffic
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8501
          ToPort: 8501
          CidrIp: !Ref CidrIPRange
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref CidrIPRange
  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref AdminRole

  AdminRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              AWS:
                - !Sub arn:aws:iam::${AWS::AccountId}:root
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AdministratorAccess

  TextractVectorCollection:
    Type: 'AWS::OpenSearchServerless::Collection'
    Properties:
      Name: textract-vector-collection
      Type: VECTORSEARCH
      Description: Search collection
    DependsOn: [EncryptionPolicy, DataAccessPolicy, SecurityPolicy]

  EncryptionPolicy:
    Type: 'AWS::OpenSearchServerless::SecurityPolicy'
    Properties:
      Name: encryption-policy
      Type: encryption
      Description: Encryption policy for test collection
      Policy: >-
        {"Rules":[{"ResourceType":"collection","Resource":["collection/textract-vector-collection"]}],"AWSOwnedKey":true}

  DataAccessPolicy:
    Type: 'AWS::OpenSearchServerless::AccessPolicy'
    Properties:
      Name: data-access-policy
      Type: data
      Description: Access policy for my-collection
      Policy: !Sub >-
        [{"Description":"Access for ${AdminRole}","Rules":[{"ResourceType":"index","Resource":["index/*/*"],"Permission":["aoss:*"]},
        {"ResourceType":"collection","Resource":["collection/textract-vector-collection"],"Permission":["aoss:*"]}],
        "Principal":["arn:aws:iam::${AWS::AccountId}:role/${AdminRole}"]}]

  SecurityPolicy:
    Type: 'AWS::OpenSearchServerless::SecurityPolicy'
    Properties:
      Name: network-policy
      Type: network
      Description: Network policy for test collections
      Policy: >-
        [{"Rules":[{"ResourceType":"collection","Resource":["collection/textract-vector-collection"]}],"AllowFromPublic":true}]

Outputs:
  EC2InstanceID:
    Description: The Instance ID
    Value: !Ref EC2Instance
  BuckeName:
    Description: The bucket name
    Value: !Ref S3BucketName
  OpenSearchEndpoint:
    Description: OpenSearch Collection OpenSearchEndpoint
    Value: !GetAtt TextractVectorCollection.CollectionEndpoint
